--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ $terminal = ghostty
 $fileManager = dolphin
 $menu = rofi -show drun
 $browser = brave
+$screenshotTool = flameshot gui
 
 
 #################
@@ -288,6 +289,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+#screenshot
+bind = ,Print, exec, $screenshotTool
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -303,3 +306,4 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
