--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,8 +35,13 @@ exec-once = waybar & hyprpaper
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
+env = GTK_THEME,Adwaita:dark
+env = GTK2_RC_FILES,/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
+env = QT_STYLE_OVERRIDE,Adwaita-Dark
+env = QT_QPA_PLATFORMTHEME,qt6ct
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
 
 
 ###################
