--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -169,6 +169,7 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
+    middle_click_paste = false
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
     animate_manual_resizes = true
@@ -299,6 +300,8 @@ bind = ,Print, exec, $screenshotTool
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
+#fullscreen
+bind = $mainMod, w, fullscreen
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
