--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,8 +3,8 @@
 monitor=,preferred,auto,1 #scaling
 
 #DP-1 on the left of DP-2
-# monitor = DP-1, 1920x1080, 0x0, 1
-# monitor = DP-2, 1920x1080, 1920x0, 1
+ monitor = DP-1, 1920x1080, 0x0, 1
+ monitor = DP-2, 1920x1080, 1920x0, 1
 #DP-1 on the right of DP-2
 # monitor = DP-1, 1920x1080, 1920X0, 1
 # monitor = DP-2, 1920x1080, 0, 1
@@ -16,7 +16,7 @@ monitor=,preferred,auto,1 #scaling
 # Programs that I use
 $terminal = ghostty
 $fileManager = dolphin
-$menu = rofi -show drun
+$menu = rofi -show drun -show-icons
 $browser = brave
 $screenshotTool = flameshot gui
 
@@ -69,8 +69,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 2
-    gaps_out = 1
+    gaps_in = 10 
+    gaps_out = 10
 
     border_size = 1
 
@@ -94,7 +94,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.8
 
     shadow {
         enabled = true
@@ -190,7 +190,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 1 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = .5 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
