update: monitor & walpaper config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,13 +1,19 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,1 #scaling
 
-#DP-1 on the left of DP-2
- monitor = DP-1, 1920x1080, 0x0, 1
- monitor = DP-2, 1920x1080, 1920x0, 1
-#DP-1 on the right of DP-2
-# monitor = DP-1, 1920x1080, 1920X0, 1
-# monitor = DP-2, 1920x1080, 0, 1
+monitor = eDP-1, 1920x1080@60, 0x1633, 1.00 #built-in monitor
+monitor = HDMI-A-1, 1920x1080@60, 4480x978, 1.00, transform, 1 #external vertical monitor
+monitor = DP-2, 2560x1440@180, 1920x978, 1.00 #main monitor
+
+# --- XP-Pen Tablet Mapping Configuration --- 
+ input {
+    tablet {
+        transform = 0
+        output = DP-3
+        region_position = 0 0
+        region_size = 1920 1080
+    }
+}
 
 ###################
 ### MY PROGRAMS ###
@@ -94,7 +100,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.8
+    inactive_opacity = 1.0
 
     shadow {
         enabled = true
@@ -190,7 +196,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = .5 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.75 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
@@ -303,6 +309,7 @@ bind = ,Print, exec, $screenshotTool
 #fullscreen
 bind = $mainMod, w, fullscreen
 
+
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
@@ -314,4 +321,7 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+#enable sharing and recording using obs
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
