--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,9 @@
-preload = /home/thinking/Pictures/minecraft.png
-wallpaper = eDP-1,/home/thinking/Pictures/minecraft.png
+# Preload all images first 
+preload = ~/Pictures/wallpaper/vertical.jpg
+preload = ~/Pictures/wallpaper/main.png
+preload = ~/Pictures/wallpaper/moon.png
 
+# Set specific wallpapers
+wallpaper = DP-2, ~/Pictures/wallpaper/main.png      # For Acer monitor (middle)
+wallpaper = HDMI-A-1, ~/Pictures/wallpaper/vertical.jpg      # For Xiaomi monitor (right, vertical)
+wallpaper = eDP-1, ~/Pictures/wallpaper/moon.png         # For laptop's built-in monitor
