update: bar, dunst notification config, hyprland configurations

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,9 @@ monitor = eDP-1, 1920x1080@60, 0x1633, 1.00 #built-in monitor
 monitor = HDMI-A-1, 1920x1080@60, 4480x978, 1.00, transform, 1 #external vertical monitor
 monitor = DP-2, 2560x1440@180, 1920x978, 1.00 #main monitor
 
+wsbind = 1, eDP-1
+wsbind = 2, DP-2
+wsbind = 3, HDMI-A-1
 # --- XP-Pen Tablet Mapping Configuration --- 
  input {
     tablet {
@@ -25,14 +28,13 @@ $fileManager = dolphin
 $menu = rofi -show drun -show-icons
 $browser = brave
 $screenshotTool = flameshot gui
-
+$pomodorotimer = /home/thinking/.local/bin/waybar_timer serve
 
 #################
 ### AUTOSTART ###
 #################
 
-exec-once = $terminal
-exec-once = waybar & hyprpaper 
+exec-once = $pomodorotimer & waybar & hyprpaper 
 
 
 #############################
@@ -302,7 +304,17 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 #screenshot
-bind = ,Print, exec, $screenshotTool
+bind = Ctrl,Print, exec, $screenshotTool #flameshot tool
+
+# Interactive selection (your main use case)
+bind = , Print, exec, grimblast copy area --freeze #grim to take a ss
+bind = SHIFT, Print, exec, grimblast copysave area
+
+# Current monitor only
+bind = CTRL, Print, exec, grimblast copy screen
+
+# Active window
+bind = ALT, Print, exec, grimblast copy active
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
