--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -2,6 +2,7 @@
 preload = ~/Pictures/wallpaper/vertical.jpg
 preload = ~/Pictures/wallpaper/main.png
 preload = ~/Pictures/wallpaper/moon.png
+preload = ~/Pictures/wallpaper/Aayusha.jpeg
 
 # Set specific wallpapers
 wallpaper = DP-2, ~/Pictures/wallpaper/main.png      # For Acer monitor (middle)
