--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,205 +1,121 @@
-// -*- mode: jsonc -*-
 {
-  "layer": "top", // Waybar at top layer
-  "height": 30, // Waybar height (to be removed for auto height)
-  "spacing": 5, // Gaps between modules (4px)
-  // Choose the order of the modules
+  "layer": "top",
+  "position": "top",
+  "height": 32,
+  "spacing": 4,
   "modules-left": [
-    "hyprland/workspaces",
-    "hyprland/mode"
+    "hyprland/workspaces"
   ],
   "modules-center": [
-    "hyprland/window"
+    "clock"
   ],
   "modules-right": [
-    "idle_inhibitor",
+    "custom/timer",
     "pulseaudio",
+    "pulseaudio#microphone",
+    "backlight",
     "network",
-    "power-profiles-daemon",
     "cpu",
     "memory",
     "temperature",
-    "backlight",
-    "keyboard-state",
-    "sway/language",
-    "battery",
-    "battery#bat2",
-    "clock",
-    "tray",
-    "custom/power"
+    "battery"
   ],
   "hyprland/workspaces": {
-    "disable-scroll": true,
-    "all-outputs": true,
-    "warp-on-scroll": false,
-    "format": "{name}: {icon}",
-    "format-icons": {
-      "1": "",
-      "2": "",
-      "3": "",
-      "4": "",
-      "5": "",
-      "urgent": "",
-      "focused": "",
-      "default": ""
-    }
-  },
-  "hyprland/mode": {
-    "format": "<span style=\"italic\">{}</span>"
-  },
-  "hyprland/scratchpad": {
-    "format": "{icon} {count}",
-    "show-empty": false,
-    "format-icons": [
-      "",
-      ""
-    ],
-    "tooltip": true,
-    "tooltip-format": "{app}: {title}"
-  },
-  "idle_inhibitor": {
-    "format": "{icon}",
-    "format-icons": {
-      "activated": "",
-      "deactivated": ""
-    }
-  },
-  "tray": {
-    "icon-size": 22,
-    "spacing": 12
-  },
-  "clock": {
-    "format": "{:%I:%M %p}", // Only show time in 12-hour format with AM/PM
-    "tooltip-format": "<big>{:%A, %B %d, %Y}</big>", // Show full date on hover
-    "format-alt": "{:%m/%d/%Y}" // Optional alternate format (used in tooltip fallback)
+    "format": "{name}",
+    "on-click": "activate"
   },
   "cpu": {
-    "format": "{usage}% ",
-    "tooltip": true,
-    "tooltip-format": "CPU Usage: {usage}%\nFrequency: {frequency} MHz\nCores: {cores}",
-    "format-underline": "#2980b9",
-    "format-alt": "{usage}%",
-    "interval": 2
+    "format": "<span color='#50fa7b'></span> {usage}%",
+    "interval": 10
   },
   "memory": {
-    "format": "{percentage}% ",
-    "tooltip": true,
-    "tooltip-format": "Memory Usage: {used:0.1f}GiB / {total:0.1f}GiB ({percentage}%)"
+    "format": "<span color='#8be9fd'></span> {used:0.1f}G"
   },
   "temperature": {
-    // "thermal-zone": 2,
-    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-    "critical-threshold": 80,
-    // "format-critical": "{temperatureC}°C {icon}",
-    "format": "{temperatureC}°C {icon}",
-    "format-icons": [
-      "",
-      "",
-      ""
-    ]
+    "format": "<span color='#ffb86c'></span> {temperatureC}°C"
+  },
+  "pulseaudio": {
+    "format": "<span color='#bd93f9'>{icon}</span> {volume}%",
+    "format-muted": "<span color='#6272a4'></span> Muted",
+    "format-bluetooth": "<span color='#8be9fd'></span> {volume}%",
+    "format-muted-bluetooth": "<span color='#6272a4'> </span> Muted",
+    "format-icons": {
+      "default": [
+        "",
+        "",
+        ""
+      ],
+      "bluetooth": ""
+    },
+    "on-click": "pamixer -t",
+    "on-click-right": "pavucontrol",
+    "tooltip-format": "{desc}"
+  },
+  "pulseaudio#microphone": {
+    "format": "<span color='#ffffff'>{format_source}</span>",
+    "format-source": " {volume}%",
+    "format-source-muted": " Muted",
+    "on-click": "pamixer --default-source -t",
+    "on-click-right": "pavucontrol",
+    "on-scroll-up": "pamixer --default-source -i 5",
+    "on-scroll-down": "pamixer --default-source -d 5",
+    "scroll-step": 5,
+    "tooltip-format": "Microphone: {desc}"
   },
   "backlight": {
-    // "device": "acpi_video1",
-    "format": "{percent}% {icon}",
+    "format": "<span color='#f1fa8c'>{icon}</span> {percent}%",
     "format-icons": [
-      "",
-      "",
-      "",
-      "",
-      "",
-      "",
-      "",
-      "",
-      ""
-    ]
+      "󰃞",
+      "󰃠"
+    ],
+    "tooltip-format": "Brightness: {percent}%"
+  },
+  "network": {
+    "format": "<span color='#ff79c6'></span> {essid}",
+    "format-alt": "<span color='#ff79c6'></span> {signalStrength}%",
+    "format-ethernet": "<span color='#ff79c6'>󰈀</span> Eth",
+    "format-disconnected": "<span color='#6272a4'>󰖪</span> Off",
+    "on-click": "ghostty -e nmtui",
+    "tooltip-format": "{ifname}: {ipaddr}/{cidr}\nSignal: {signalStrength}%"
   },
   "battery": {
     "states": {
-      // "good": 95,
       "warning": 30,
       "critical": 15
     },
-    "format": "{capacity}% {icon}",
-    "format-full": "{capacity}% {icon}",
-    "format-charging": "{capacity}% ",
-    "format-plugged": "{capacity}% ",
-    "format-alt": "{time} {icon}",
-    // "format-good": "", // An empty format will hide the module
-    // "format-full": "",
+    "format": "<span color='#50fa7b'>{icon}</span> {capacity}%",
+    "format-charging": "<span color='#f1fa8c'></span> {capacity}%",
+    "format-plugged": "<span color='#f1fa8c'></span> {capacity}%",
     "format-icons": [
       "",
       "",
       "",
       "",
       ""
-    ]
+    ],
+    "tooltip-format": "{time} remaining"
   },
-  "battery#bat2": {
-    "bat": "BAT2"
+  "clock": {
+    "format": "{:%H:%M | %a %d}",
+    "tooltip-format": "<tt><small>{calendar}</small></tt>"
   },
-  "power-profiles-daemon": {
-    "format": "{icon}",
-    "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
-    "tooltip": true,
+  "custom/timer": {
+    "exec": "/home/thinking/.local/bin/waybar_timer hook",
+    "exec-on-event": false,
+    "return-type": "json",
+    // This format uses the icon and the text returned by your script
+    "format": "<span color='#ff5555'>{icon}</span> {0}",
     "format-icons": {
-      "default": "",
-      "performance": "",
-      "balanced": "",
-      "power-saver": ""
-    }
-  },
-  "network": {
-    // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "{essid} ({signalStrength}%) ",
-    "format-ethernet": "{ipaddr}/{cidr} ",
-    "tooltip-format": "{ifname} via {gwaddr} ",
-    "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": "Disconnected ⚠",
-    "format-alt": "{ifname}: {ipaddr}/{cidr}"
-  },
-  "pulseaudio": {
-    // "scroll-step": 1, // %, can be a float
-    "format": "{volume}% {icon} {format_source}",
-    "format-bluetooth": "{volume}% {icon} {format_source}",
-    "format-bluetooth-muted": " {icon} {format_source}",
-    "format-muted": " {format_source}",
-    "format-source": "{volume}% ",
-    "format-source-muted": "",
-    "format-icons": {
-      "headphone": "",
-      "hands-free": "",
-      "headset": "",
-      "phone": "",
-      "portable": "",
-      "car": "",
-      "default": [
-        "",
-        "",
-        ""
-      ]
+      "standby": "󱫌",
+      "running": "󱎫",
+      "paused": "󰏥"
     },
-    "on-click": "pavucontrol"
-  },
-  "custom/media": {
-    "exec": "playerctl status 2> /dev/null",
-    "interval": 1,
-    "format": "{icon} {artist} - {title}",
-    "format-icons": {
-      "Playing": "",
-      "Paused": "",
-      "Stopped": ""
-    }
-  },
-  "custom/power": {
-    "format": "⏻ ",
-    "tooltip": false,
-    "menu": "on-click",
-    "menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
-    "menu-actions": {
-      "shutdown": "shutdown",
-      "reboot": "reboot",
-      "suspend": "systemctl suspend",
-      "hibernate": "systemctl hibernate"
-    }
+    "tooltip": true,
+    "tooltip-format": "{icon} {0}\n\nLeft click: Start 25min session\nMiddle click: Cancel timer\nRight click: Pause/Resume\nScroll: Adjust time",
+    "on-click": "/home/thinking/.local/bin/waybar_timer new 25 'notify-send \"Session finished\"'",
+    "on-click-middle": "/home/thinking/.local/bin/waybar_timer cancel",
+    "on-click-right": "/home/thinking/.local/bin/waybar_timer togglepause",
+    "on-scroll-up": "/home/thinking/.local/bin/waybar_timer increase 60 || /home/thinking/.local/bin/waybar_timer new 1 'notify-send -u critical \"Timer expired\"'",
+    "on-scroll-down": "/home/thinking/.local/bin/waybar_timer decrease 60"
   }
 }
