fix: monitor workspace binding

--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,1 +1,7 @@
+[General]
+contrastOpacity=188
+drawColor=#800000
+insecurePixelate=true
+savePath=/home/thinking/Pictures/SS
+savePathFixed=true
 useGrimAdapter=true
