--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,11 +5,12 @@ monitor = eDP-1, 1920x1080@60, 0x1633, 1.00 #built-in monitor
 monitor = HDMI-A-1, 1920x1080@60, 4480x978, 1.00, transform, 1 #external vertical monitor
 monitor = DP-2, 2560x1440@180, 1920x978, 1.00 #main monitor
 
-wsbind = 1, eDP-1
-wsbind = 2, DP-2
-wsbind = 3, HDMI-A-1
+workspace = 1, monitor:eDP-1
+workspace = 2, monitor:DP-2
+workspace = 3, monitor:HDMI-A-1
+
 # --- XP-Pen Tablet Mapping Configuration --- 
- input {
+input {
     tablet {
         transform = 0
         output = DP-3
